--- a/postgres.conf
+++ b/postgres.conf
@@ -57,7 +57,7 @@
 
 # - Connection Settings -
 
-listen_addresses = '*'
+# listen_addresses = '*'
                                         # comma-separated list of addresses;
                                         # defaults to 'localhost'; use '*' for all
                                         # (change requires restart)
@@ -202,7 +202,7 @@ listen_addresses = '*'
 
 # - Settings -
 
-wal_level = logical                    # minimal, replica, or logical
+# wal_level = logical                    # minimal, replica, or logical
                                         # (change requires restart)
 #fsync = on                             # flush data to disk for crash safety
                                         # (turning this off can cause
@@ -295,9 +295,9 @@ wal_level = logical                    # minimal, replica, or logical
 
 # Set these on the primary and on any standby that will send replication data.
 
-max_wal_senders = 5           # max number of walsender processes
+# max_wal_senders = 5           # max number of walsender processes
                                 # (change requires restart)
-max_replication_slots = 5     # max number of replication slots
+# max_replication_slots = 5     # max number of replication slots
                                 # (change requires restart)
 #wal_keep_size = 0              # in megabytes; 0 disables
 #max_slot_wal_keep_size = -1    # in megabytes; -1 disables
